Fix border shift movement in questions

--- a/frontend/src/pages/gameModeSelection/gameModeSelection.scss
+++ b/frontend/src/pages/gameModeSelection/gameModeSelection.scss
@@ -35,7 +35,7 @@
     
             h2 {
                 font-size: 30px;
-                color: #FF6B00;
+                color: #FF6F3C;
             }
     
             p {
@@ -44,7 +44,7 @@
             }
     
             button {
-                background-color: #FF6B00;
+                background-color: #FF6F3C;
                 color: white;
                 border: none;
                 padding: 10px 20px;
